Use Java's List/Set/Map.of
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>